Added a problem template

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,8 @@ theme:
     # Palette toggle for dark mode
     - scheme: slate
       media: "(prefers-color-scheme: dark)"
+      primary: deep orange
+      accent: teal
       toggle:
         icon: material/toggle-switch-off-outline
         name: Switch to light mode
