--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,9 @@ nav:
   - LeetStats: index.md
   - Problems:
     - problems/index.md
-    - problems/spell-checker.md
+    - Easy:
+      - problems/random-or-not.md
+    - Hard:
+      - problems/spell-checker.md
   - Solutions:
     - solutions/index.md
